--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dotenv": "^17.2.1",
     "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.5",
     "nodemon": "^3.1.10"
   },
