--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.5",
+    "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
     "validator": "^13.15.15"
   },
